feat: add DiscardPile class with getTopCard and refill functionality in conjunction with the Deck class